# rust-web-server

./: .gitignore  404.html  AI_ADOPTION.md  C10K.sh  CITATION.cff  CLAUDE.md  CONFIGURE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  Dockerfile  FAQ.md  FRAMEWORK_ROADMAP.md  GAPS.md  IDEAS.md  INSTALL.md  KAFKA_ROADMAP.md  LICENSE  LIKE_SPRING.md  README.md  RELEASE.md  ROADMAP.md  config.toml  configure.html  index.html  llms.txt  rws.command_line  rws.config.toml  rws.variables  test.txt
.cargo/: config_arm_windows
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
DEVELOPER/: UBUNTU_LTS_DEVELOPER_SETUP.md
LICENSE/: LICENSE  LICENSE-ISC  LICENSE-MIT
assets/: test.txt
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/styles/: custom.css
helm/rws/: .helmignore  Chart.yaml  README.md  values.yaml
helm/rws/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml
logo/: favicon.xcf
rws-macros/: Cargo.toml
rws-macros/src/: lib.rs
rws-wasm-shim/: Cargo.toml
rws-wasm-shim/src/: lib.rs
spec/: ADMIN_ROADMAP.md  AI_ADOPTION.md  ARCHITECTURAL_CHANGES.md  DEMOS_TODO.md  FRAMEWORK_ROADMAP.md  GAPS.md  GAPS_V2.md  GAPS_V3.md  GAPS_V4.md  IDEAS.md  K8S_ROADMAP.md  LIKE_SPRING.md  MCP_TODO.md  MODEL.md  PLAN.md  PROXY_SERVER_CONFIG.md  REACT_GAPS.md  ROADMAP.md  SSO.md  TODO.md  TODO_FINAL.md  WASM_SHIM.md
src/: README.md  app.rs  constant.rs  cors.rs  header.rs  lib.rs  main.rs  mime_type.rs  range.rs  request.rs  response.rs  server.rs  test.rs  thread_pool.rs
src/acme/: client.rs  crypto.rs  mod.rs  tests.rs
src/app/: mod.rs  tests.rs
src/app/controller/: mod.rs
src/application/: README.md  mod.rs
src/application/example/: mod.rs
src/async_bridge/: mod.rs  tests.rs
src/async_state/: mod.rs  tests.rs
src/auth/: forward.rs  mod.rs  tests.rs
src/auth/forward/: tests.rs
src/blocklist/: mod.rs  tests.rs
src/body/: README.md  mod.rs
src/body/example/: example_object.rs  mod.rs
src/body/form_urlencoded/: mod.rs
src/body/multipart_form_data/: mod.rs  tests.rs
src/cache/: mod.rs  tests.rs
src/canary/: mod.rs  tests.rs
src/circuit_breaker/: mod.rs  tests.rs
src/client_hint/: mod.rs  tests.rs
src/compression/: mod.rs  tests.rs
src/config_binding/: mod.rs  tests.rs
src/config_reload/: mod.rs  tests.rs
src/controller/: README.md  mod.rs
src/controller/example/: index.html  mod.rs
src/cookie/: crypto_ext.rs  mod.rs  tests.rs
src/cookie/crypto_ext/: tests.rs
src/core/: README.md  mod.rs
src/core/base64/: README.md  mod.rs  tests.rs
src/cors/: mod.rs  tests.rs
src/crypto/: mod.rs  tests.rs
src/csrf/: mod.rs  tests.rs
src/di/: mod.rs  tests.rs
src/entry_point/: mod.rs  tests.rs
src/entry_point/command_line_args/: mod.rs  tests.rs
src/error/: mod.rs  tests.rs
src/ext/: mod.rs
src/extract/: mod.rs  tests.rs
src/feature/: mod.rs  tests.rs
src/h2_handler/: mod.rs
src/h3_handler/: mod.rs
src/header/: README.md  mod.rs  tests.rs
src/http/: mod.rs  tests.rs
src/http_client/: mod.rs  tests.rs
src/ingress/: mod.rs  tests.rs  tls.rs  watch.rs
src/ip_filter/: mod.rs  tests.rs
src/jobs/: mod.rs  tests.rs
src/json/: FAQ.md  README.md  example_nested_object.rs  example_object.rs  extractor.rs  mod.rs  tests.rs
src/language/: mod.rs  tests.rs
src/log/: mod.rs  tests.rs
src/macros/: mod.rs  tests.rs
src/mailer/: mod.rs  tests.rs
src/maintenance/: mod.rs  tests.rs
src/mcp/: json_rpc.rs  mod.rs  tests.rs
src/metrics/: mod.rs  tests.rs
src/middleware/: mod.rs  tests.rs
src/mime_type/: mod.rs  tests.rs
src/model/: backend.rs  connection.rs  migration.rs  mod.rs  pool.rs  query.rs  relation.rs  repository.rs  tests.rs
src/null/: README.md  mod.rs  tests.rs
src/openapi/: mod.rs  tests.rs
src/otel/: mod.rs  tests.rs
src/pagination/: mod.rs  tests.rs
src/prelude/: mod.rs
src/proxy/: mod.rs  pool.rs  tests.rs
src/proxy_config/: builder.rs  health.rs  mod.rs  parser.rs  tests.rs
src/range/: README.md  mod.rs  tests.rs
src/rate_limit/: mod.rs  tests.rs
src/redis_protocol/: mod.rs
src/request/: README.md  empty-host.request.txt  mod.rs  no-host.request.txt  no-path.query.request.txt  no-query.request.txt  port.request.txt  query.request.txt  tests.rs
src/request_id/: mod.rs  tests.rs
src/request_log/: mod.rs  tests.rs
src/response/: README.md  mod.rs  response.multipart.no_boundary_at_the_beginning.txt  response.multipart.no_boundary_at_the_end.txt  tests.rs
src/rewrite/: mod.rs  tests.rs
src/router/: matcher.rs  mod.rs  tests.rs
src/scheduler/: cron.rs  mod.rs  tests.rs
src/secrets/: aws_secrets_manager.rs  azure_key_vault.rs  mod.rs  tests.rs  vault.rs
src/server/: README.md  mod.rs  tests.rs
src/server_config/: mod.rs  tests.rs
src/service_discovery/: consul.rs  dns_srv.rs  docker.rs  etcd.rs  json_lite.rs  mod.rs  tests.rs
src/session/: mod.rs  tests.rs
src/sse/: mod.rs  tests.rs
src/sso/: client.rs  client_store.rs  config.rs  discovery.rs  jwks.rs  mod.rs  oidc_auth.rs  pkce.rs  server.rs  tests.rs
src/sso/saml/: der.rs  (+5 more)
src/state/: mod.rs  tests.rs
src/storage/: aws_credentials.rs  aws_sigv4.rs  azure_blob.rs  azure_credentials.rs  azure_signature.rs  local.rs  mod.rs  s3.rs
src/symbol/: mod.rs  tests.rs
src/tcp_proxy/: mod.rs
src/template/: mod.rs  tests.rs
src/test/: config.toml  cors_test.rs  mime_type_test.rs  range_test.rs  request_test.rs  response_test.rs  rws.config.toml  server_test.rs  thread_pool_test.rs
src/test_client/: mod.rs  tests.rs
src/thread_pool/: mod.rs  tests.rs
src/timeout/: mod.rs  tests.rs
src/tls/: mod.rs
src/udp_proxy/: mod.rs
src/url/: README.md  mod.rs  tests.rs
src/validate/: mod.rs  tests.rs
src/virtual_host/: mod.rs
src/webhook/: mod.rs  tests.rs
src/websocket/: mod.rs  tests.rs
src/ws_proxy/: mod.rs
static/: audio.m4a  audio.m4a.base64  file.html  form.html  index.html  style.css  test.json  test.txt  video.mov
static/no_index/: a & b.txt  alpha.txt  beta.json
static/subdir/: data.json
(+423 files in other folders)
