[package]
name = "rust-web-server"
version = "17.82.0"
authors = ["Bohdan Tsap <bohdan.tsap@tutanota.com>"]
repository = "https://github.com/bohdaq/rust-web-server"
homepage = "https://rws8.tech/"
description = "A dependency-minimal Rust web platform: HTTP/1.1, HTTP/2, and HTTP/3 server, reverse proxy, and application framework with routing, middleware (auth, rate limiting, tracing), an async ORM, background jobs, object storage, and a mailer. Runs as a zero-code config-driven proxy or as a library crate. No third-party HTTP dependencies."
edition = "2021"
rust-version = "1.75"
license = "MIT"
keywords = ["http", "web-server", "http3", "reverse-proxy", "mcp"]
categories = ["network-programming", "web-programming::http-server"]

[lib]
name = "rust_web_server"
path = "src/lib.rs"

[[bin]]
name = "rws"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["http3"]
http1 = ["dep:ctrlc", "dep:libc"]
http2 = ["dep:h2", "dep:rustls", "dep:tokio-rustls", "dep:tokio", "dep:bytes", "dep:rustls-pemfile", "dep:http", "dep:webpki-roots"]
http3 = ["http2", "dep:quinn", "dep:h3", "dep:h3-quinn"]
http-client = ["dep:rustls", "dep:webpki-roots"]
acme   = ["http2", "dep:rcgen", "dep:webpki-roots", "dep:libc", "dep:aws-lc-rs"]
serde  = ["dep:serde", "dep:serde_json"]
auth   = ["dep:hmac", "dep:sha2"]
auth-asymmetric = ["auth", "dep:rsa", "dep:p256", "dep:rand_core"]  # RS256/ES256 in JwtLayer; reuses the sso feature's rsa/p256 deps
macros = ["dep:rws-macros"]
tera   = ["dep:tera", "dep:serde", "dep:serde_json"]
model-sqlite   = ["dep:sqlx", "sqlx/sqlite",   "sqlx/runtime-tokio", "http2"]
model-postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/runtime-tokio-rustls", "http2"]
model-mysql    = ["dep:sqlx", "sqlx/mysql",    "sqlx/runtime-tokio-rustls", "http2"]
crypto = ["dep:argon2", "dep:rand_core", "dep:hmac", "dep:sha2", "dep:aes-gcm"]
csrf   = ["dep:rand_core"]
mailer = []  # plain SMTP; STARTTLS/SMTPS additionally requires http-client or http2
sso    = ["dep:rsa", "dep:p256", "dep:sha2", "dep:rand_core", "dep:serde", "dep:serde_json", "http-client"]
jobs   = []  # in-memory JobQueue; PersistentJobQueue additionally requires a model-* feature
storage-local = []  # LocalStorage; no new deps
storage-s3    = ["dep:hmac", "dep:sha2", "http-client"]  # S3Storage; AWS SigV4 via hmac+sha2, no AWS SDK
storage-azure = ["dep:hmac", "dep:sha2", "http-client"]  # AzureBlobStorage; Shared Key HMAC signing + Managed Identity, no Azure SDK
openapi = []  # AppWithState::openapi() / AsyncAppWithState::openapi(); no new deps
webhook = ["dep:hmac", "dep:sha2"]  # verify_webhook_signature: GitHub, Shopify, Stripe
rewrite-regex = ["dep:regex"]  # RewriteLayer::request_uri_regex_rewrite

[dependencies]
ctrlc = { version = "3", optional = true }
libc = { version = "0.2", optional = true }
file-ext = "12.0.0"
flate2 = "1"
url-search-params = "12.0.0"
url-build-parse = "12.1.0"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "io-util", "signal", "time"], optional = true }
rcgen = { version = "0.13", default-features = false, features = ["pem", "aws_lc_rs"], optional = true }
webpki-roots = { version = "0.26", optional = true }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "tls12", "logging", "std"], optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
h2 = { version = "0.4", optional = true }
bytes = { version = "1", optional = true }
http = { version = "1", optional = true }
quinn = { version = "0.11", optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
hmac  = { version = "0.12", optional = true }
sha2  = { version = "0.10", features = ["oid"], optional = true }
rsa       = { version = "0.9", optional = true }
p256      = { version = "0.13", features = ["ecdsa"], optional = true }
aws-lc-rs = { version = "1", optional = true }
rws-macros = { path = "rws-macros", version = "17", optional = true }
tera = { version = "1", optional = true }
sqlx = { version = "0.8", default-features = false, optional = true }
argon2    = { version = "0.5", features = ["password-hash"], optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
aes-gcm   = { version = "0.10", optional = true }
regex     = { version = "1", optional = true }
